--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ffffff" />
-    <meta name="description" content="A 40/20 interval workout timer app" />
+    <meta name="description" content="A quick workout app with interval training" />
     <link rel="apple-touch-icon" href="/pwa-192x192.png" />
     <link rel="mask-icon" href="/mask-icon.svg" color="#ffffff" />
-    <title>Workout Timer</title>
+    <title>Quick Workout</title>
   </head>
   <body>
     <div id="root"></div>
