--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A quick workout app with interval training" />
     <link rel="apple-touch-icon" href="/pwa-192x192.png" />
     <link rel="mask-icon" href="/mask-icon.svg" color="#ffffff" />
-    <title>Quick Workout</title>
+    <title>MyFitnessTimer</title>
   </head>
   <body>
     <div id="root"></div>
